--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -24,3 +24,5 @@ The following errors prevented the article from getting created
 
 </p>
 <% end %>
+
+<%= link_to "Back to articles listing", articles_path %>
