--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,5 +6,6 @@
 
 <p>
   Description: <%= @article.description %>
-
 </p>
+<%= link_to "edit this article", edit_article_path(@article) %><br/>
+<%= link_to "Back to articles listing", articles_path %>
