--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,16 +1,6 @@
 Edit existing Article
-<%= form_for @article do |f| %>
-<p>
-  <%= f.label :title %><br />
-  <%= f.text_field :title %>
-</p>
-<p>
-  <%= f.label :description %><br />
-  <%= f.text_area :description %>
-</p>
 
-<p>
-  <%= f.submit %>
 
-</p>
-<% end %>
+<%= render 'form' %>
+
+<%= link_to "Back to articles listing", articles_path %>
