--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,6 +11,7 @@
     <td><%= list.description %></td>
     <td><%= link_to 'Edit', edit_article_path(list)%></td>
     <td><%= link_to 'Show', article_path(list)%></td>
+    <td><%= link_to 'Delete', article_path(list), method: :delete, data:{confirm: "Are you sure?"}%></td>
   </tr>
   <% end %>
 </table>
