--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,17 +1,27 @@
-<h1>This is the list of all article</h1>
-<p><%= link_to "Create new article", new_article_path %></p>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-  </tr>
-  <% @articles.each do |list| %>
-  <tr>
-    <td><%= list.title %></td>
-    <td><%= list.description %></td>
-    <td><%= link_to 'Edit', edit_article_path(list)%></td>
-    <td><%= link_to 'Show', article_path(list)%></td>
-    <td><%= link_to 'Delete', article_path(list), method: :delete, data:{confirm: "Are you sure?"}%></td>
-  </tr>
-  <% end %>
-</table>
+<h1 align="center">listing all articles</h1>
+
+<% @articles.each do |list| %>
+<div class="row">
+  <div class="col-xs-8 col-xs-offset-2">
+    <div class="well well-lg">
+      <div class="article-title">
+        <%= link_to list.title, article_path(list) %>
+      </div>
+      <div class="article-body">
+        <%= truncate(list.description, length: 100) %>
+      </div>
+
+      <div class="article-actions">
+      <%= link_to "edit this article", edit_article_path(list), class: "btn btn-xs btn-primary" %>
+      <%= link_to "show article", article_path(list), class: "btn btn-xs btn-success" %>
+      <%= link_to "Delete this article", article_path(list), method: :delete,
+                    data: {confirm: "Are you sure you wan to delete article?"}, class: "btn btn-xs btn-danger" %>
+
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<% end %>
