--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,3 +10,4 @@
 <%= link_to "Delete this article", article_path(@article), method: :delete,
               data: {confirm: "Are you sure you wan to delete article?"}, class: "btn btn-xs btn-danger" %>
 <%= link_to "view all articles", articles_path, class: "btn btn-xs btn-success" %>
+</div>
