--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,10 @@
   <hr>
 
   <%= simple_format(@article.description) %>
+  <small>Article Author: <%= @article.user.username %></small><br />
+  <small>Author's email: <%= @article.user.email %></small><br />
+  <small><% time_ago_in_words(@article.created_at) %></small><br />
+    <small>last updated: <%= time_ago_in_words(@article.updated_at) %> ago </small>
 
 <div class="article-actions">
 <%= link_to "edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
