created the profile page

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
         <%= link_to list.username, user_path(list) %>
       </div>
       <div class="article-body">
-        <%= list.email, user_path(list) %>
+        <%= list.email %>
       </div>
 
       <div class="article-actions">
