--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,27 +1,3 @@
 <h1 align="center">listing all articles</h1>
 
-<% @articles.each do |list| %>
-<div class="row">
-  <div class="col-xs-8 col-xs-offset-2">
-    <div class="well well-lg">
-      <div class="article-title">
-        <%= link_to list.title, article_path(list) %>
-      </div>
-      <div class="article-body">
-        <%= truncate(list.description, length: 100) %>
-      </div>
-
-      <div class="article-actions">
-      <%= link_to "edit this article", edit_article_path(list), class: "btn btn-xs btn-primary" %>
-      <%= link_to "show article", article_path(list), class: "btn btn-xs btn-success" %>
-      <%= link_to "Delete this article", article_path(list), method: :delete,
-                    data: {confirm: "Are you sure you wan to delete article?"}, class: "btn btn-xs btn-danger" %>
-
-
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<% end %>
+<%= render 'article', obj:@articles %>
