--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,11 @@
-<h2 align="center">Username: <%= @user.username %></h2>
-<h2 align="center">Email: <%= @user.email %></h2>
-<div class="well col-xs-8 col-xs-offset-2">
-  
-  <hr>
+<h2 align="center">Welcome to <%= @user.username %>'s page</h2>
+
+<div class="row">
+  <div class="col-md-4 col-md-offset-4 center">
+    <%= gravatar_for @user %>
+<!-- <h2 align="center">Email: <%= @user.email %></h2> -->
+</div>
+</div>
+<h4 align="center"><%= @user.username %>'s articles </h4>
+
+<%= render 'articles/article', obj: @user.articles %>
