--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,4 @@
 <h1 align="center">listing all articles</h1>
-
+<%== pagy_bootstrap_nav(@pagy) %>
 <%= render 'article', obj:@articles %>
+<%== pagy_bootstrap_nav(@pagy) %>
