--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -40,6 +40,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
         <li><%= link_to 'log out', logout_path, method: :delete %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -51,7 +52,11 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
+        <% else %>
+        <li><%= link_to 'Login path', login_path %></li>
+        <li><%= link_to 'Sign up', signup_path %></li>
       </ul>
+      <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
