--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -8,16 +8,16 @@
       <div class="article-body">
         <%= truncate(list.description, length: 100) %>
       </div>
+       </div>
+          <% if logged_in? && current_user == list.user %>
+            <div class="article-actions">
+            <%= link_to "edit this article", edit_article_path(list), class: "btn btn-xs btn-primary" %>
+            <%= link_to "show article", article_path(list), class: "btn btn-xs btn-success" %>
+            <%= link_to "Delete this article", article_path(list), method: :delete,
+                          data: {confirm: "Are you sure you wan to delete article?"}, class: "btn btn-xs btn-danger" %>
 
-      <div class="article-actions">
-      <%= link_to "edit this article", edit_article_path(list), class: "btn btn-xs btn-primary" %>
-      <%= link_to "show article", article_path(list), class: "btn btn-xs btn-success" %>
-      <%= link_to "Delete this article", article_path(list), method: :delete,
-                    data: {confirm: "Are you sure you wan to delete article?"}, class: "btn btn-xs btn-danger" %>
-
-
-      </div>
-    </div>
+           </div>
+    <% end %>
   </div>
 </div>
 
