--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,13 +5,15 @@
 
   <%= simple_format(@article.description) %>
   <small>Article Author: <%= @article.user.username  if @article.user%></small><br />
-  
+
   <small><% time_ago_in_words(@article.created_at) %></small><br />
     <small>last updated: <%= time_ago_in_words(@article.updated_at) %> ago </small>
 
 <div class="article-actions">
+  <% if logged_in? && current_user == @article.user %>
 <%= link_to "edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
 <%= link_to "Delete this article", article_path(@article), method: :delete,
               data: {confirm: "Are you sure you wan to delete article?"}, class: "btn btn-xs btn-danger" %>
+  <% end %>
 <%= link_to "view all articles", articles_path, class: "btn btn-xs btn-success" %>
 </div>
