--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -9,7 +9,7 @@
         <%= truncate(list.description, length: 100) %>
       </div>
        </div>
-          <% if logged_in? && current_user == list.user %>
+          <% if logged_in? && (current_user == list.user || current_user.admin?) %>
             <div class="article-actions">
             <%= link_to "edit this article", edit_article_path(list), class: "btn btn-xs btn-primary" %>
             <%= link_to "show article", article_path(list), class: "btn btn-xs btn-success" %>
