--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,7 +10,7 @@
     <small>last updated: <%= time_ago_in_words(@article.updated_at) %> ago </small>
 
 <div class="article-actions">
-  <% if logged_in? && current_user == @article.user %>
+  <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
 <%= link_to "edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
 <%= link_to "Delete this article", article_path(@article), method: :delete,
               data: {confirm: "Are you sure you wan to delete article?"}, class: "btn btn-xs btn-danger" %>
